gitignore with STM32CubeIDE and STM32CubeMX

--- a/.gitignore
+++ b/.gitignore
@@ -265,3 +265,49 @@ desktop.ini
 
 # blender
 *.blend1
+
+# STM32CubeIDE and STM32CubeMX
+Drivers/*
+MDK-ARM/*
+EWARM/*
+Debug/*
+# CrossWorks project files
+!*/*.hzp
+!*/*.hzs
+
+*.o
+.mxproject
+*.settings
+
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Misc
+*.map
+*.m
+
+# Vagrant directory
+.vagrant/
