--- a/.gitignore
+++ b/.gitignore
@@ -120,7 +120,6 @@ eggs/
 .eggs/
 lib/
 lib64/
-parts/
 sdist/
 var/
 wheels/
@@ -311,3 +310,6 @@ desktop.ini
 
 # Vagrant directory
 .vagrant/
+
+### Autodesk Inventor ###
+*OldVersions/
