--- a/py_src/.vscode/launch.json
+++ b/py_src/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: *.kv",
+            "name": "NormalMapScanner",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/normal_map_scanner.py",
